welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: reassignment to val
  if (estSurBiscuit()) {vb=true}
                          ^Program:6: error: reassignment to val
    if (estSurBiscuit()) {vb=true}
                            ^