welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  def vb:Boolean = false
  if (estSurBiscuit()) {vb=true}
  for (i <- 1 to 6) {
    avance()
    if (estSurBiscuit()) {vb=true}
  }
  for (i <- 1 to 6) {
    recule()
  }
  return vb
}